# website

./: .gitignore  Cargo.toml  README.md
.tangled/workflows/: build.yml
assets/: app.css  app.js  site.webmanifest
assets/fonts/inter/: inter.css
assets/photos/: index.css  index.js  show.css
src/: app_error.rs  blog.rs  config.rs  date_time.rs  db.rs  main.rs  models.rs  photos.rs  post.rs  templates.rs
src/routes/: info.rs  mod.rs  photos.rs  resume.rs
src/routes/blog/: index.rs  mod.rs  show.rs
src/routes/home/: index.rs
src/routes/music/: index.rs
src/routes/photos/: index.rs  show.rs
src/routes/projects/: index.rs  show.rs
src/styles/: app.css  posts.css
src/views/: mod.rs
src/views/blog/: mod.rs  shared.css
src/views/blog/index/: mod.rs  style.css  template.jinja
src/views/blog/show/: mod.rs  script.js  style.css  syntax.css  template.jinja
src/views/home/: mod.rs
src/views/home/index/: mod.rs  style.css  template.jinja
src/views/info/: mod.rs  template.jinja
src/views/music/: mod.rs
src/views/music/index/: mod.rs  template.jinja
src/views/photos/: mod.rs
src/views/photos/index/: mod.rs  script.js  style.css  template.jinja
src/views/photos/show/: mod.rs  style.css  template.jinja
src/views/projects/: mod.rs
src/views/projects/index/: mod.rs  template.jinja
src/views/projects/show/: mod.rs  template.jinja
src/views/resume/: mod.rs  style.css  template.jinja
templates/: index.jinja  layout.jinja  posts.jinja
templates/blog/: show.jinja
templates/photos/: index.jinja  show.jinja
