[package]
name = "photos"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
chrono = "0.4.42"
dotenv = "0.15.0"
minijinja = { version = "2.12.0", features = ["loader"] }
serde = "1.0.228"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs"] }
