[package]
name = "website"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.12.1", features = ["query"] }
axum-tracing-opentelemetry = "0.32.2"
chrono = "0.4.42"
dotenvy = "0.15.7"
init-tracing-opentelemetry = { version = "0.34.0", features = [
  "otlp",
  "tracing_subscriber_ext",
  "metrics",
] }
minijinja = { version = "2.12.0", features = ["loader", "debug"] }
minijinja-autoreload = "2.12.0"
serde = "1.0.228"
serde_html_form = "0.2.8"
serde_valid = "2.0.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "set-header"] }
tracing = "0.1.43"
urlencoding = "2.1.3"
serde_yaml = "0.9.34"
comrak = "0.48.0"
arborium = { version = "2.3.2", features = ["all-languages"] }
slug = "0.1.6"
regex = "1.12.2"
html-escape = "0.2.13"
chrono-tz = "0.10.4"
sysinfo = "0.38.3"
